# horus

./: .gitignore  .version-locations.txt  ALPHA_RELEASE_ANALYSIS.md  ALPHA_RELEASE_SUMMARY.md  CHANGELOG.md  CODE_QUALITY_ASSESSMENT.md  CONTRIBUTING.md  Cargo.toml  GITHUB_ISSUES_VERIFICATION.md  HORUS_API_INCONSISTENCIES_REPORT.md  LICENSE  LOGGING_SYSTEM_RESEARCH.md  PRIVACY.md  README.md  RELEASE_NOTES_0.1.5.md  ROADMAP.md  SECURITY.md  benchmark_results.json  horus.yaml  install.sh  recovery_install.sh  rust_out.s  test_per_node_rate.rs  test_types  uninstall.sh  update.sh  verify.sh
.github/: CLA.md  (+3 more)
benchmarks/: Cargo.toml  METHODOLOGY.md  QUICK_START.md  README.md  ROBOTICS_PRODUCTION_TESTS.md  SUMMARY.md  benchmark_restore.sh  benchmark_results.json  benchmark_setup.sh
benchmarks/benches/: link_performance.rs  network_transport.rs  production_messages.rs
benchmarks/results/: RESULTS.md  latest_run.txt  link_benchmark_analysis.md
benchmarks/scripts/: run_all.sh  run_horus_only.sh  run_network_bench.sh
benchmarks/src/: lib.rs
benchmarks/tests/: README.md  run_tests.sh
horus/: Cargo.toml  README.md
horus/src/: lib.rs
horus_core/: Cargo.toml  README.md  SCHEDULER_API_DESIGN.md
horus_core/benches/: network_bench.rs
horus_core/examples/: link_motor_control.rs  link_simple.rs  mixed_communication.rs  network_perf_test.rs  network_production.rs  scheduler_api_patterns.rs
horus_core/src/: backend.rs  error.rs  lib.rs  params.rs
horus_core/src/communication/: config.rs  hub.rs  link.rs  mod.rs  traits.rs
horus_core/src/core/: log_buffer.rs  mod.rs  node.rs  node_info_ext.rs  rt_node.rs
horus_core/src/memory/: mod.rs  platform.rs  shm_region.rs  shm_topic.rs
horus_core/src/ml/: model_loader.rs  model_registry.rs
horus_core/src/rtos/: hal.rs  interrupt.rs  memory.rs  mod.rs  sync.rs
horus_core/src/scheduling/: blackbox.rs  checkpoint.rs  config.rs  mod.rs  record_replay.rs  redundancy.rs  runtime.rs  safety_monitor.rs  scheduler.rs  telemetry.rs
horus_core/tests/: acceptance_hub.rs  acceptance_scheduler.rs  autonomous_robot_application.rs  horus.yaml  jit_integration_test.rs  rt_node_test.rs  rt_scheduler_integration.rs  scheduler_config_test.rs  simple_test.rs  test_enhanced_scheduler.rs
horus_cpp/: .gitignore  API_REDESIGN_SUMMARY.md  Cargo.toml  LANGUAGE_COMPARISON.md  Makefile  README.md  README_NEW.md  camera_driver  framework_demo  lidar_driver  robot_arm_driver
horus_cpp/examples/: camera_driver.cpp  framework_demo.cpp  lidar_driver.cpp  lidar_driver_new.cpp  message_showcase  message_showcase.cpp  pubsub_simple_new.cpp  robot_arm_driver.cpp  robot_system_new.cpp
horus_cpp/include/: horus.h  horus.hpp  horus_new.hpp
horus_cpp/src/: lib.rs
horus_daemon/: Cargo.toml  README.md  horus-daemon.service
horus_daemon/src/: auth.rs  deploy.rs  discovery.rs  executor.rs  hardware.rs  main.rs  process.rs  ratelimit.rs  stream.rs
horus_library/: Cargo.toml  README.md  lib.rs
horus_library/algorithms/: mod.rs
horus_library/algorithms/aabb/: mod.rs
horus_library/algorithms/astar/: README.md  example_basic.rs  mod.rs  tests.rs
horus_library/algorithms/differential_drive/: mod.rs
horus_library/algorithms/ekf/: mod.rs
horus_library/algorithms/kalman_filter/: mod.rs
horus_library/cpp/: README.md
horus_library/examples/: hardware_sensors_demo.rs  joystick_advanced_example.rs  llm_chat.rs  yolo_detection.rs
horus_library/hframe/: bench.rs  config.rs  core.rs  messages.rs  mod.rs  registry.rs  slot.rs  transform.rs  types.rs
horus_library/messages/: cmd_vel.rs  control.rs  coordination.rs  diagnostics.rs  force.rs  geometry.rs  io.rs  joystick_msg.rs  keyboard_input_msg.rs  ml.rs  mod.rs  navigation.rs  perception.rs  sensor.rs  snake_state.rs  timing.rs  vision.rs
horus_library/nodes/: README.md  camera_node.rs  collision_detector_node.rs  differential_drive_node.rs  digital_io_node.rs  emergency_stop_node.rs  encoder_node.rs  imu_node.rs  joystick_node.rs  keyboard_input_node.rs  lidar_node.rs  localization_node.rs  mod.rs  modbus_node.rs  path_planner_node.rs  pid_controller_node.rs  safety_monitor_node.rs  servo_controller_node.rs
horus_library/python/: Cargo.toml  README.md  pyproject.toml
horus_library/tf/: BLUEPRINT.md  buffer.rs  messages.rs  mod.rs  transform.rs  tree.rs
horus_library/tools/: Cargo.toml
horus_manager/: Cargo.toml  README.md
horus_manager/examples/: test_yaml_parser.rs
horus_manager/src/: crates_io.rs  dashboard.rs  dashboard.rs.backup  dashboard_tui.rs  dashboard_tui.rs.backup  dependency_resolver.rs  graph.rs  lib.rs  main.rs  node_detector.rs  progress.rs  registry.rs  static_analysis.rs  system_deps.rs  version.rs  workspace.rs  yaml_utils.rs
horus_manager/tests/: dashboard_api_tests.rs  param_api_tests.rs
horus_py/: .coverage  ASYNC_IO.md  ASYNC_IO_DESIGN.md  ASYNC_IO_GUIDE.md  ASYNC_IO_PHASE2.md  Cargo.toml  PRODUCTION_GUIDE.md  PYPI_PUBLISHING.md  PYTHON_API_ENHANCEMENTS_SUMMARY.md  README.md  SOFT_REALTIME.md  coverage.xml  demo_async_io_threaded.py  demo_async_phase2.py  demo_fault_tolerance.py  demo_node_introspection.py  demo_soft_realtime.py  demo_watchdog.py  horus_async_helpers.py  pyproject.toml  test_async_io_simple.py  test_async_io_threaded.py  test_circuit_breaker_simple.py  test_fault_tolerance.py  test_node_introspection.py  test_soft_realtime.py  test_watchdog.py
horus_py/benchmarks/: performance_comparison.py
horus_py/examples/: async_http_api.py  cross_language_example.py  custom_data_example.py  network_hub_example.py  network_link_example.py  optimized_api_example.py  pose_estimation.py  router_example.py  simple_async.py
horus_py/horus/: __init__.py  async_node.py  ml_utils.py  nodes.py
horus_py/src/: config.rs  hframe.rs  hub.rs  lib.rs  link.rs  messages.rs  node.rs  router.rs  scheduler.rs  typed_hub.rs  types.rs
horus_py/tests/: conftest.py  multiprocess_publisher.py  multiprocess_subscriber.py  test_cross_language.py  test_message_integrity.py  test_nodes.py  test_rate_control.py  test_sim2d.py  test_timestamps.py  test_typed_messages.py
(+894 files in other folders)
