[package]
name = "horus_benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["HORUS Team"]
description = "Professional benchmark suite for HORUS robotics framework"
license = "MIT OR Apache-2.0"

[lib]
name = "horus_benchmarks"
path = "src/lib.rs"

[[bench]]
name = "production_messages"
harness = false

[dependencies]
horus = { path = "../horus" }
horus_library = { path = "../horus_library" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
colored = "2.0"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"