[package]
name = "horus_benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["HORUS Team"]
description = "Professional benchmark suite for HORUS robotics framework"
license = "MIT OR Apache-2.0"

[lib]
name = "horus_benchmarks"
path = "src/lib.rs"

[[bench]]
name = "production_messages"
harness = false

[[bench]]
name = "link_performance"
harness = false

[[bin]]
name = "ipc_benchmark"
path = "src/bin/ipc_benchmark.rs"
doc = true

[[bin]]
name = "ipc_debug"
path = "src/bin/ipc_debug.rs"
doc = false

[dependencies]
horus = { path = "../horus" }
horus_library = { path = "../horus_library", features = ["iceoryx2"] }
serde.workspace = true
serde_bytes = "0.11"
colored = "2.0"
anyhow = "1.0"
iceoryx2 = "0.7.0"
iceoryx2-bb-elementary-traits = "0.7.0"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"