[package]
name = "horus_benchmarks"
version = "0.1.2"
edition = "2021"
authors = ["HORUS Team"]
description = "Professional benchmark suite for HORUS robotics framework"
license = "MIT OR Apache-2.0"

[features]
default = []
iceoryx2 = []

[lib]
name = "horus_benchmarks"
path = "src/lib.rs"

[[bench]]
name = "production_messages"
harness = false

[[bench]]
name = "link_performance"
harness = false

[[bin]]
name = "ipc_benchmark"
path = "src/bin/ipc_benchmark.rs"
doc = true

[[bin]]
name = "ipc_debug"
path = "src/bin/ipc_debug.rs"
doc = false

# Production qualification test binaries
[[bin]]
name = "test_api_compatibility"
path = "src/bin/test_api_compatibility.rs"
doc = false

[[bin]]
name = "test_ipc_functionality"
path = "src/bin/test_ipc_functionality.rs"
doc = false

[[bin]]
name = "test_memory_safety"
path = "src/bin/test_memory_safety.rs"
doc = false

[[bin]]
name = "test_robotics_usage"
path = "src/bin/test_robotics_usage.rs"
doc = false

[[bin]]
name = "test_logging"
path = "src/bin/test_logging.rs"
doc = false

[[bin]]
name = "test_stress"
path = "src/bin/test_stress.rs"
doc = false

[[bin]]
name = "test_robotics_production"
path = "src/bin/test_robotics_production.rs"
doc = false

[[bin]]
name = "test_critical_production"
path = "src/bin/test_critical_production.rs"
doc = false

[dependencies]
horus = { path = "../horus" }
horus_library = { path = "../horus_library", features = ["iceoryx2"] }
serde.workspace = true
serde_bytes = "0.11"
serde_arrays = "0.1"
colored = "2.0"
anyhow = "1.0"
iceoryx2 = "0.7.0"
iceoryx2-bb-elementary-traits = "0.7.0"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"