[package]
name = "horus"
version = "0.1.5"
edition = "2021"
authors = ["HORUS Team"]
description = "HORUS - Hybrid Optimized Robotics Unified System framework for Rust"
license = "Apache-2.0"
repository = "https://github.com/softmata/horus"
keywords = ["robotics", "ros", "ipc", "real-time", "framework"]
categories = ["science::robotics", "embedded", "network-programming"]

[dependencies]
# Core HORUS components
horus_core = { path = "../horus_core" }
horus_macros = { path = "../horus_macros", optional = true }
horus_library = { path = "../horus_library" }

# Re-export commonly used dependencies
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["macros"]
macros = ["dep:horus_macros"]

# Hardware feature flags (compile-time)
gpio-hardware = []
bno055-imu = []
mpu6050-imu = []
gilrs = []
crossterm = []
rplidar = []
modbus-hardware = []

[lib]
name = "horus"
path = "src/lib.rs"