[package]
name = "horus_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "horus_core"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
log = "0.4"
libc = "0.2"
memmap2 = "0.9"
tempfile = "3.0"
crossbeam = "0.8"
once_cell = "1.19"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"
bytemuck = { version = "1.14", features = ["derive"] }
ctrlc = "3.4"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "std"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
lazy_static = "1.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Macros (optional)
horus_macros = { path = "../horus_macros", optional = true }

[features]
default = ["macros"]
macros = ["horus_macros"]