[package]
name = "horus_core"
version = "0.1.5"
edition = "2021"

[lib]
name = "horus_core"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
log = "0.4"
libc = "0.2"
memmap2 = "0.9"
tempfile = "3.0"
crossbeam = "0.8"
once_cell = "1.19"
num_cpus = "1.16"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
regex = "1.10"
toml = "0.8"
bincode = "1.3"
bytemuck = { version = "1.14", features = ["derive"] }
ctrlc = "3.4"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.10"
parking_lot = "0.12"
cranelift = "0.110"
cranelift-jit = "0.110"
cranelift-module = "0.110"
cranelift-native = "0.110"
chrono = { version = "0.4", features = ["serde", "std"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
lazy_static = "1.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# TLS/Security (optional)
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
rcgen = { version = "0.13", optional = true }  # For self-signed certs

# Macros (optional)
horus_macros = { path = "../horus_macros", optional = true }

# HTTP client for model downloading (optional)
reqwest = { version = "0.11", features = ["blocking"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["macros"]
macros = ["horus_macros"]
rtos = []
tls = ["rustls", "tokio-rustls", "rustls-pemfile", "rcgen"]
rt-linux = ["rtos"]
freertos = ["rtos"]
zephyr = ["rtos"]
qnx = ["rtos"]
bare-metal = ["rtos"]