[package]
name = "horus_cpp"
version = "0.1.5"
edition = "2021"
description = "C++ API for HORUS - Hardware driver integration"
authors = ["HORUS Team"]

[lib]
name = "horus_cpp"
crate-type = ["cdylib", "staticlib"]

[dependencies]
horus_core = { path = "../horus_core" }
lazy_static = "1.4"
libc = "0.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cbindgen = "0.26"

[features]
default = []