[package]
name = "horus_library"
version = "0.1.0"
edition = "2021"
description = "HORUS Library - Collection of Nodes, Algorithms, and Unies"
authors = ["HORUS Team"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_arrays = "0.1"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
bytemuck = { version = "1.0", features = ["derive"] }
approx = "0.5"
bincode = "1.3"

# HORUS core dependency
horus_core = { path = "../horus_core" }

# Optional dependencies for nodes
rppal = { version = "0.18", optional = true }
sysinfo = { version = "0.30", optional = true }
opencv = { version = "0.91", optional = true, default-features = false }
nokhwa = { version = "0.10", optional = true, features = ["input-v4l"] }
serialport = { version = "4.2", optional = true }
rplidar_drv = { version = "0.6", optional = true }
tokio-modbus = { version = "0.7", optional = true }
crossterm = { version = "0.27", optional = true }
gamepads = { version = "0.1", optional = true }

[features]
default = ["control-nodes", "input-nodes"]

# Node categories
safety-nodes = ["rppal", "sysinfo"]
basic-sensors = ["opencv", "nokhwa", "serialport"]
control-nodes = []
industrial-nodes = ["tokio-modbus"]
input-nodes = ["crossterm", "gamepads"]

# Individual node features
raspberry-pi = ["rppal"]
opencv-backend = ["opencv"]
v4l2-backend = ["nokhwa"]
rplidar = ["rplidar_drv"]
modbus-tcp = ["tokio-modbus"]

[lib]
name = "horus_library"
path = "lib.rs"



# Note: snakesim has its own workspace configuration
# Individual unies manage their own dependencies
