[package]
name = "horus_library"
version = "0.1.4"
edition = "2021"
description = "HORUS Library - Collection of Nodes, Algorithms, and Example Apps"
authors = ["HORUS Team"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_arrays = "0.1"
rmp-serde = "1.1"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
bytemuck = { version = "1.0", features = ["derive"] }
approx = "0.5"
bincode = "1.3"
colored = "2.0"
iceoryx2-bb-elementary-traits = { version = "0.7.0", optional = true }

# HORUS core dependency
horus_core = { path = "../horus_core" }

# Optional dependencies for nodes
rppal = { version = "0.18", optional = true }
sysinfo = { version = "0.30", optional = true }
opencv = { version = "0.91", optional = true, default-features = false }
nokhwa = { version = "0.10", optional = true, features = ["input-v4l"] }
realsense-rust = { version = "1.2", optional = true }
serialport = { version = "4.2", optional = true }
rplidar_drv = { version = "0.6", optional = true }
tokio-modbus = { version = "0.7", optional = true }
crossterm = { version = "0.27", optional = true }
gilrs = { version = "0.10", optional = true }

# IMU drivers
mpu6050 = { version = "0.1", optional = true }
bno055 = { version = "0.4", optional = true }
icm20948 = { version = "0.0.1", optional = true }

# GPS/GNSS drivers
nmea = { version = "0.5", optional = true }

# I2C/SPI bus support
linux-embedded-hal = { version = "0.4", optional = true }
embedded-hal = { version = "1.0", optional = true }
spidev = { version = "0.6", optional = true }
i2cdev = { version = "0.6", optional = true }

# CAN bus support
socketcan = { version = "3.0", optional = true }

# GPIO support
sysfs_gpio = { version = "0.6", optional = true }

# Additional sensor drivers
# ydlidar = { version = "0.2", optional = true }
hc-sr04 = { version = "0.1", optional = true }

[features]
default = ["control-nodes", "input-nodes"]
iceoryx2 = ["iceoryx2-bb-elementary-traits"]

# Node categories
safety-nodes = ["rppal", "sysinfo"]
basic-sensors = ["opencv", "nokhwa", "serialport"]
control-nodes = []
industrial-nodes = ["tokio-modbus"]
input-nodes = ["crossterm", "gilrs"]

# Depth camera support
realsense = ["realsense-rust"]

# Hardware support bundles
imu-hardware = ["mpu6050", "bno055", "icm20948", "linux-embedded-hal", "embedded-hal"]
gps-hardware = ["nmea", "serialport"]
lidar-hardware = ["rplidar_drv", "serialport"]
can-hardware = ["socketcan"]
spi-hardware = ["spidev", "linux-embedded-hal"]
i2c-hardware = ["i2cdev", "linux-embedded-hal"]
gpio-hardware = ["sysfs_gpio", "rppal"]
motor-hardware = ["serialport", "gpio-hardware"]
full-hardware = ["imu-hardware", "gps-hardware", "lidar-hardware", "raspberry-pi", "can-hardware", "spi-hardware", "i2c-hardware", "gpio-hardware", "motor-hardware"]

# Individual node features
raspberry-pi = ["rppal", "linux-embedded-hal"]
opencv-backend = ["opencv"]
v4l2-backend = ["nokhwa"]
rplidar = ["rplidar_drv", "serialport"]
ydlidar-backend = ["serialport"]
modbus-tcp = ["tokio-modbus"]

# IMU sensor support
mpu6050-imu = ["mpu6050", "linux-embedded-hal", "embedded-hal"]
bno055-imu = ["bno055", "linux-embedded-hal", "embedded-hal"]
icm20948-imu = ["icm20948", "linux-embedded-hal", "embedded-hal"]

# GPS sensor support
nmea-gps = ["nmea", "serialport"]

[lib]
name = "horus_library"
path = "lib.rs"



# Note: snakesim has its own workspace configuration
# Individual example apps manage their own dependencies
