[package]
name = "horus_manager"
version = "0.1.0"
edition = "2021"
description = "Unified manager for the HORUS robotics framework"
authors = ["HORUS Team"]

[lib]
name = "horus_manager"
path = "src/lib.rs"

[[bin]]
name = "horus"
path = "src/main.rs"

[dependencies]
# horus = { path = "../horus" }  # Temporarily disabled due to horus_library build issues
horus_core = { path = "../horus_core" }
horus_library = { path = "../horus_library", optional = true }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
toml_edit = "0.22"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
num_cpus = "1.16"
tempfile = "3.8"
lazy_static = "1.4"
eframe = "0.24"
egui = "0.24"
egui_extras = "0.24"
egui_plot = "0.24"
pulldown-cmark = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.3"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
serde_yaml = "0.9"
regex = "1.10"
broadcast = "0.1"
ureq = { version = "2.9", features = ["json"] }
fs_extra = "1.3"
glob = "0.3"
open = "5.0"
hostname = "0.4"
semver = "1.0"

# TUI dependencies
ratatui = "0.24"
crossterm = "0.27"
rand = "0.8"

# Web dashboard dependencies
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
webbrowser = "0.8"
futures = "0.3"