[package]
name = "horus_py"
version = "0.1.1"
edition = "2021"

[lib]
name = "horus_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
horus = { path = "../horus" }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crossbeam-channel = "0.5"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
pythonize = "0.22"

[build-dependencies]
pyo3-build-config = "0.22"

[profile.release]
lto = true
opt-level = 3