[package]
name = "horus_py"
version = "0.1.5"
edition = "2021"

[lib]
name = "horus_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39", "num-bigint", "num-complex"] }
numpy = "0.22"  # Zero-copy NumPy array support
horus = { path = "../horus" }
horus_library = { path = "../horus_library" }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack serialization (2-5x faster than JSON)
bincode = "1.3"
crossbeam-channel = "0.5"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
pythonize = "0.22"
ctrlc = "3.4"
colored = "2.0"
crossterm = "0.27"  # Terminal styling
parking_lot = "0.12"  # Faster mutexes for buffer pool

[build-dependencies]
pyo3-build-config = "0.22"

[profile.release]
lto = true
opt-level = 3