[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "horus"
version = "0.1.1"
description = "Simple & intuitive Python API for HORUS robotics framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics"
]
keywords = ["robotics", "real-time", "distributed", "ipc", "horus"]

# No optional dependencies needed for simple API

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "horus._horus"